Add screenshots and links for Skills.

--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -1,3 +1,7 @@
+#one a:hover {
+	opacity: 0.5;
+}
+
 .skills-icons {
 	font-size: 100px;
 	padding: 30px;
@@ -19,4 +23,8 @@
 .projects {
 	padding-top: 14px;
 	text-align: center;
+}
+
+.buttons > a {
+	margin-right: 10px;
 }
