Finish up Contact section.

--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -1,5 +1,22 @@
+.section {
+	text-align: center;
+}
+
+#intro p {
+	text-align: center;
+}
+
+#intro li {
+	width: 100%;
+	text-align: center;
+}
+
 #one a:hover {
 	opacity: 0.5;
+}
+
+#one h3, #one p {
+	margin-left: 15px;
 }
 
 .skills-icons {
@@ -22,9 +39,21 @@
 
 .projects {
 	padding-top: 14px;
-	text-align: center;
 }
 
 .buttons > a {
 	margin-right: 10px;
+}
+
+.icons {
+	font-size: 50px;
+	margin-bottom: 0px;
+}
+
+.contact {
+	text-align: center;
+}
+
+#footer .inner {
+	text-align: center;
 }
