--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -2,6 +2,13 @@
 	text-align: center;
 }
 
+.profile {
+	border-radius: 25%;
+	width: 20%;
+	display: block;
+	margin: auto;
+}
+
 #intro p {
 	text-align: center;
 }
